More tests + simpler implementation